[package]
name = "holo-client"
version = "0.1.0"
edition = "2021"

[dependencies]
image = "0.25.2"
reqwest = "0.12.9"
rppal = "0.19.0"
tokio = { version = "1.40.0", features = ["full"] }

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
